refactored button styling, media queries, error message, inivte code replaced from email, js arrow overflow, fixed back button logic on slide 3, removed excess black border on final choice image, added down arrow icon to survey link

--- a/styles-1.css
+++ b/styles-1.css
@@ -165,11 +165,11 @@ body {
 }
 
 #scroll-indicator {
-    position: sticky;
-    bottom: 20px;
-    left: 80%;
-    transform: translateX(-40%);
-    font-size: 2rem;
+    position: absolute;
+    top: 90%;
+    left: 90%;
+    transform: translateX(-45%);
+    font-size: 1.5rem;
     color: #fff;
     opacity: 0;
     transition: opacity 0.5s ease;
@@ -197,6 +197,12 @@ body {
     50% {
         opacity: 1;
     }
+}
+
+.survey-link { 
+    color: rgb(197, 207, 151);
+   cursor: pointer;
+    
 }
 
 u {
